# basic-cpp-app

./: CMakeLists.txt  run_cmake.py
src/: main.cpp
